--- a/CSS/block_inline_inlineblock.css
+++ b/CSS/block_inline_inlineblock.css
@@ -55,5 +55,7 @@ li a:hover,a:focus{
     color: black;
     background-color: white;
     padding: 1rem;
+    transition: all .5s ;
+    border-radius: 1000000000px;
     
 }
