--- a/CSS/grid_and_basic_layout.css
+++ b/CSS/grid_and_basic_layout.css
@@ -98,6 +98,9 @@ order: 1; order of the grid items */
     grid-column: 1 / 4;
     grid-row:1 / 3;
     /*shorthand- span 3 columns and 2 rows */
+    /* grid-column: 1 / 4;: This sets the item to start at the first column line and end at the fourth column line. In other words, it spans across three columns (columns 1, 2, and 3). The item starts at the leftmost boundary of the grid and ends just before the fourth column.
+
+    grid-row: 1 / 3;: This sets the item to start at the first row line and end at the third row line. It spans across two rows (rows 1 and 2). The item starts at the topmost boundary of the grid and ends just before the third row. */
 
     display: grid; /*nested grid container , grid item being grid container */
     align-content: center;
